fix overflow home

--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,6 +1,6 @@
 .Home {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: auto 1fr;
   gap: 20px;
   padding: 20px;
   align-content: center;
@@ -11,6 +11,8 @@
   grid-template-columns: repeat(auto-fill, minmax(auto, 163px));
   gap: 20px;
   justify-content: center;
+  overflow-y: auto;
+  height: 63vh;
 }
 
 .Home .product .product-image img {
